<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/siguptest"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/centered_background_one"
    android:clipToOutline="true"
    android:theme="@style/Theme.MyApplication"
    tools:context="com.alertpulse.myapplication.SignUpFragment">

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/section_4"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:clipToOutline="true"
        >
        <TextView
            android:id="@+id/crear_nueva"
            android:layout_width="420dp"
            android:layout_height="50dp"
            android:text="@string/crear_nueva_cuenta"
            android:textAppearance="@style/crear_nueva"
            android:lineSpacingExtra="2sp"
            android:gravity="center_horizontal|center_vertical"
            />
    </RelativeLayout>
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        android:id="@+id/section_9"
        android:layout_width="411dp"
        android:layout_height="150dp"
        android:clipToOutline="true"
        android:layout_below="@id/section_4"
        >

        <ImageView
            android:id="@+id/micSignup"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:scaleType="center"
            android:src="@drawable/baseline_mic_24" />
    </RelativeLayout>
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        android:id="@+id/section_5"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:clipToOutline="true"
        android:layout_below="@id/section_9"
        >

        <TextView
            android:id="@+id/ya_te_encue"
            android:layout_width="341dp"
            android:layout_height="84dp"
            android:layout_centerInParent="true"
            android:gravity="top"
            android:lineSpacingExtra="2sp"
            android:text="@string/ya_registrado"
            android:textAppearance="@style/ya_te_encue"
            android:translationY="-1.11sp" />
    </RelativeLayout>
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        android:id="@+id/section_6"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:layout_below="@id/section_5"
        android:clipToOutline="true"
        android:theme="@style/Theme.MyApplication">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle2"
            android:id="@+id/textField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/nombre"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:boxBackgroundColor="@color/schemesPrimaryContainer"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/schemesSecondary"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/section_7"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:clipToOutline="true"
        android:layout_below="@id/section_6"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle2"
            android:id="@+id/textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/email"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:boxBackgroundColor="@color/schemesPrimaryContainer"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/schemesSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/section_8"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:clipToOutline="true"
        android:layout_below="@id/section_7"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle2"
            android:id="@+id/textField3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/constrasena"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:boxBackgroundColor="@color/schemesPrimaryContainer"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/schemesSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/section_10"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:clipToOutline="true"
        android:layout_below="@id/section_8"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle2"
            android:id="@+id/textField4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/repetir_contrasena"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:boxBackgroundColor="@color/schemesPrimaryContainer"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/schemesSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        android:id="@+id/section_11"
        android:layout_width="411dp"
        android:layout_height="150dp"
        android:clipToOutline="true"
        android:layout_below="@id/section_10"
        >

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="203dp"
            android:layout_height="62dp"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/schemesPrimary"
            android:text="@string/registrarse"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/textAppearanceHeadlineSmall" />
    </RelativeLayout>
</RelativeLayout>

