<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/asociateselectremindertest"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/centered_background_two"
    android:clipToOutline="true"
    android:theme="@style/Theme.MyApplication"
    tools:context="com.alertpulse.myapplication.AsociateSelectFragment">

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/section_4"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:clipToOutline="true"
        >
        <TextView
            android:id="@+id/crear_nueva"
            android:layout_centerVertical="true"
            android:layout_width="420dp"
            android:layout_height="50dp"
            android:text="@string/asociar_recordatorio"
            android:textAppearance="@style/crear_nueva"
            android:lineSpacingExtra="2sp"
            android:gravity="center_horizontal|center_vertical"
            />
    </RelativeLayout>

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/section_5"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:clipToOutline="true"
        android:layout_below="@id/section_4"
        >
        <TextView
            android:id="@+id/asociar_info"
            android:layout_centerVertical="true"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:text="@string/asociar_selecciona"
            android:textAppearance="@style/asociar_info"
            android:lineSpacingExtra="2sp"
            android:gravity="center_horizontal|center_vertical"
            />
    </RelativeLayout>
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        android:id="@+id/section_9"
        android:layout_width="411dp"
        android:layout_height="200dp"
        android:clipToOutline="true"


        android:layout_below="@id/section_5"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/devicesRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/fragment_devices_list"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/section_11"
        android:layout_width="411dp"
        android:layout_height="150dp"
        android:clipToOutline="true"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_below="@id/section_9"
        >

        <Button
            android:id="@+id/buttonCancelAsociate"
            android:layout_width="203dp"
            android:layout_height="62dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/center_divider_action"
            android:layout_marginLeft="2dp"
            android:backgroundTint="@color/schemesPrimary"
            android:text="@string/cancelar"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/textAppearanceHeadlineSmall" />

        <Button
            android:id="@+id/buttonAcceptAsociate"
            android:layout_width="203dp"
            android:layout_height="62dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="2dp"
            android:layout_toRightOf="@+id/center_divider_action"
            android:backgroundTint="@color/schemesPrimary"
            android:text="@string/aceptar"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/textAppearanceHeadlineSmall" />

        <View
            android:id="@+id/center_divider_action"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="invisible" />
    </RelativeLayout>
</RelativeLayout>

